syntax = "proto3";

package api.message.v1;

import "google/api/annotations.proto";

option go_package = "pet-angel/api/message/v1;v1";

// 消息/小纸条服务
// - 列表：按时间倒序分页
// - 小纸条解锁：扣金币并返回完整内容
service MessageService {
  // 获取消息列表（包含聊天与小纸条）
  rpc GetMessageList(GetMessageListRequest) returns (GetMessageListReply) {
    option (google.api.http) = { get: "/v1/message/list" };
  }
  // 解锁一条小纸条（message_type=1）
  rpc UnlockMessage(UnlockMessageRequest) returns (UnlockMessageReply) {
    option (google.api.http) = { post: "/v1/message/{message_id}/unlock" };
  }
}

// 消息体
message Message {
  int64 id = 1;              // 消息ID
  int32 sender = 2;          // 发送方 0用户 1AI
  int32 message_type = 3;    // 0聊天 1小纸条
  bool is_locked = 4;        // 小纸条是否锁定
  int32 unlock_coins = 5;    // 小纸条解锁所需金币
  string content = 6;        // 文本内容（锁定时可为空或返回占位）
  string created_at = 7;     // 创建时间 YYYY-MM-DD HH:MM:SS
}

// 消息列表请求
message GetMessageListRequest {
  int32 page = 1;            // 页码，从1开始
  int32 page_size = 2;       // 每页条数（默认20，最大100）
  bool only_notes = 3;       // 仅小纸条
}
// 消息列表响应
message GetMessageListReply { int32 total = 1; repeated Message list = 2; }

// 解锁小纸条请求
message UnlockMessageRequest { int64 message_id = 1; } // 目标消息ID
// 解锁小纸条响应
message UnlockMessageReply {
  bool success = 1;          // 是否成功
  int32 remaining_coins = 2; // 解锁后剩余金币
  Message message = 3;       // 解锁后的完整消息
} 